--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -8,12 +8,12 @@
 <div class="container-fluid">
 
   <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:orange">三月送睡袋活动 公告</div>
+    <div class="panel-heading" style="color:orange">三月送浴巾活动 公告</div>
     <div class="panel-body">
       {% if started %}
-      <p>距离活动结束还有<font style="color:red;"><span style="font-size:20px">{{ days }}</span>天<span style="font-size:20px">{{ hours }}</span>小时<span style="font-size:20px">{{ minutes }}</span>分</font>，共有<font style="color:red;font-size:20px">1000份</font>睡袋免费领取！</p>
+      <p>距离活动结束还有<font style="color:red;"><span style="font-size:20px">{{ days }}</span>天<span style="font-size:20px">{{ hours }}</span>小时<span style="font-size:20px">{{ minutes }}</span>分</font>，共有<font style="color:red;font-size:20px">2000份</font>卡通浴巾免费领取！</p>
       {% else %}
-      <p>距离活动开始还有<font style="color:red;"><span style="font-size:20px">{{ days }}</span>天<span style="font-size:20px">{{ hours }}</span>小时<span style="font-size:20px">{{ minutes }}</span>分</font>，共有<font style="color:red;font-size:20px">1000份</font>睡袋免费领取！</p>
+      <p>距离活动开始还有<font style="color:red;"><span style="font-size:20px">{{ days }}</span>天<span style="font-size:20px">{{ hours }}</span>小时<span style="font-size:20px">{{ minutes }}</span>分</font>，共有<font style="color:red;font-size:20px">2000份</font>卡通浴巾免费领取！</p>
       {% endif %}
 
       <!--
@@ -25,31 +25,32 @@
   </div>
 
   <div class="panel panel-default" style="margin-top:5px">
-  <div class="panel-heading" style="color:red">2015春夏新款睡袋（适用0-6岁）</div>
+  <div class="panel-heading" style="color:red">2015新款卡通浴巾（适用0-6岁）</div>
   <div class="panel-body">
     
     <form action="/weixin/sampleapply/" method="post" onsubmit="return check()" class="form-group">{% csrf_token %}
-      <input type="hidden" value="5" name="sample_pk"/>
+      <input type="hidden" value="6" name="sample_pk"/>
 
       <div class="row">
 	<div class="col-xs-6" style="text-align:center">
 	  <p style="margin-top:10px"><a href="http://mp.weixin.qq.com/bizmall/mallshelf?id=&t=mall/list&biz=MzA5NTI1NjYyNg==&shelf_id=2&showwxpaytitle=1#wechat_redirect">查看今日特卖 >></a></p>
 	  <a href="" class="thumbnail">
-	    <img id="id_img1" src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvicXDpybDibWGUxYObT8cpBtbkb3KOBdrVR7grpsFLUvr61EIBORu6KENetZhF9fiaPbS7htAXS3mjg/0" alt="...">
+	    <img id="id_img1" src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z38MIUrX95ZVsYNjxrfGnUX3j3ibmCVsnvt2yoleHYs1zXoppdDDiaLqbibg/0" alt="...">
 	  </a>
 	</div>
 	<div class="col-xs-6">
 	  <p style="margin-top:10px">款式选择：</p>
 	  <select class="form-control" name="color" id="id_selection_color">
-	    <option value="1">生日派对</option>
-	    <option value="2">滴滴小车</option>
-	    <option value="3">兔兔果园</option>
+	    <option value="1">小巧虎</option>
+	    <option value="2">小粉兔</option>
+	    <option value="3">小奔牛</option>
+	    <option value="4">小萌象</option>
+	    <option value="5">长颈鹿</option>
+	    <option value="6">猫头鹰</option>
 	  </select>
 	  <p style="margin-top:20px">尺寸选择：</p>
 	  <select class="form-control" name="size" id="id_selection_size">
-	    <option value="1">0-3岁</option>
-	    <option value="2">2-4岁</option>
-	    <option value="3">3-6岁</option>
+	    <option value="1">0-6岁</option>
 	  </select>
 
  	</div>
@@ -123,9 +124,12 @@
 
   var imgsrc = [
   "0",
-  "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvicXDpybDibWGUxYObT8cpBtbkb3KOBdrVR7grpsFLUvr61EIBORu6KENetZhF9fiaPbS7htAXS3mjg/0",
-  "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvicXDpybDibWGUxYObT8cpBtd6D7YwO4Chl7icWB6FIXzicxQl220MWrWg2BulcDXt1yKCAF6ibwkYaaQ/0",
-  "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvicXDpybDibWGUxYObT8cpBtlk0icBWVBsBh9gE9r6g5xT2YIGS6L9nIcU5t7TdlIDBicEnYgTPZBXDQ/0"
+  "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z38MIUrX95ZVsYNjxrfGnUX3j3ibmCVsnvt2yoleHYs1zXoppdDDiaLqbibg/0",
+  "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z38FWZtO9Jmh8DthHhZicasUbA1VgeTjdRDhQeIZXJev0mn5b6J9Y41K1Q/0",
+  "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z3821sN9PEJfdAT7AA0RUCwQPodJtbT8rmY4jJqewprggBWz3lJ0iaAxqw/0",
+  "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z38Cib53ElicBETBXKeapCLHeaV7QLC6AjOdH24r5k3Mj16bxyY7eojBMJw/0",
+  "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z38Z6ao3icHl35SWictl5RDdTiaVkRhVxZypiajmsXU9uGS0WKWkM8NoZDiaUA/0",
+  "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z38B4LJZRib3R0hYc565lr51B6SMViafFIGUtDWP5e0DFEmmHpRSKUKqY6A/0"
   ];
 
   $("#id_selection_color").change(function(){ 
