--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -18,8 +18,7 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">免费试用 中奖名单</div>
     <div class="panel-body">
-      <p style="color:red;">3月9日 - 3月16日 1000件新款睡袋免费派送！<a href="http://weixin.huyi.so/weixin/freesamples/">大家快抢 >></a></p>
-      <p>第一批通过303名幸运妈妈（VIP码使用15次，点击次数41次以上）<a href="/weixin/finallist/1/1/1503/">中奖名单&gt;&gt;</a></p>
+      <p style="color:red;">3月23日 - 3月30日 2000件卡通浴巾免费派送！<a href="http://weixin.huyi.so/weixin/freesamples/">大家快抢 >></a></p>
     </div>
   </div>
 
@@ -47,7 +46,7 @@
       {% else %}
       <p style="color:red;">亲，恭喜您的试用申请通过了！</p>
       <p>您的综合得分: <font style="color:red">{{ vip_code.usage_count  }} *10</font> + <font style="color:orange">{{ link_click.clicker_num }}</font> = {{ vip_code.usage_count|mul:10|add:link_click.clicker_num }}</p>
-      <p style="color:#029fd6">请扫描二维码添加客服微信(长按图片识别二维码)咨询睡袋领取流程:</p>
+      <p style="color:#029fd6">请扫描二维码添加客服微信(长按图片识别二维码)咨询浴巾领取流程:</p>
       <div class="row">
 	<div class="col-xs-12">
 	  <div class="thumbnail" style="padding:3px" id="id_i1">
@@ -58,7 +57,7 @@
     </div>
   </div>
   {% endif %}
-  <p style="color:#029fd6">审核说明：本次免费试用活动，将按照综合得分来审核申请。综合得分越高（即邀请码使用次数，点击次数都高），审核通过几率越大！</p>
+  <p style="color:#029fd6">审核说明：本次免费试用活动，邀请码使用次数及点击次数越高，审核通过几率越大！</p>
   <p style="color:#029fd6">加分规则：
     <ul style="color:#029fd6">
       <li >只有微信好友的点击才会给你加分；</li>
@@ -66,7 +65,7 @@
       <li>同一个手机上登录多个帐号相互点击不会加分；</li>
     </ul>
   </p>
-  <p style="color:red">如果您的得分在100分以上，您将具有极大的竞争力！</p>
+  <p style="color:red">如果您的综合得分在100分以上，您将具有极大的竞争力！</p>
   <p><a href="/weixin/sampleads/{{ wx_user.pk }}/">快快分享您的VIP邀请码专属页面吧！ Go >></a></p>
     {% else %}
     
