change html title

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -1,6 +1,6 @@
 {% extends "weixin/weixin_base.html" %}
 {% load mathfilters %}
-{% block title %}审核通知 1000+200个睡袋免费送！{% endblock %}
+{% block title %}审核通知 2000条卡通浴巾免费送！{% endblock %}
 
 {% block container %}
 
