--- a/shopmanager/shopapp/weixin/templates/weixin/sampleapply.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleapply.html
@@ -19,13 +19,22 @@
 	  <div class="col-xs-4" style="text-align:center">
 	    <div class="thumbnail">
 	      {% if color == 1 %}
-	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvicXDpybDibWGUxYObT8cpBtbkb3KOBdrVR7grpsFLUvr61EIBORu6KENetZhF9fiaPbS7htAXS3mjg/0" alt="...">
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z38MIUrX95ZVsYNjxrfGnUX3j3ibmCVsnvt2yoleHYs1zXoppdDDiaLqbibg/0" alt="...">
 	      {% endif %}
 	      {% if color == 2 %}
-	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvicXDpybDibWGUxYObT8cpBtd6D7YwO4Chl7icWB6FIXzicxQl220MWrWg2BulcDXt1yKCAF6ibwkYaaQ/0" alt="...">
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z38FWZtO9Jmh8DthHhZicasUbA1VgeTjdRDhQeIZXJev0mn5b6J9Y41K1Q/0"  alt="...">
 	      {% endif %}
 	      {% if color == 3 %}
-	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvicXDpybDibWGUxYObT8cpBtlk0icBWVBsBh9gE9r6g5xT2YIGS6L9nIcU5t7TdlIDBicEnYgTPZBXDQ/0" alt="...">
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z3821sN9PEJfdAT7AA0RUCwQPodJtbT8rmY4jJqewprggBWz3lJ0iaAxqw/0" alt="...">
+	      {% endif %}
+	      {% if color == 4 %}
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z38Cib53ElicBETBXKeapCLHeaV7QLC6AjOdH24r5k3Mj16bxyY7eojBMJw/0" alt="...">
+	      {% endif %}
+	      {% if color == 5 %}
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z38Z6ao3icHl35SWictl5RDdTiaVkRhVxZypiajmsXU9uGS0WKWkM8NoZDiaUA/0" alt="...">
+	      {% endif %}
+	      {% if color == 6 %}
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z38B4LJZRib3R0hYc565lr51B6SMViafFIGUtDWP5e0DFEmmHpRSKUKqY6A/0" alt="...">
 	      {% endif %}
 	    </div>
 	  </div>
