--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -2,7 +2,7 @@
 
 
 {% block title %} 
-自从有了娃
+浴巾用得好，宝宝爱洗澡！
 {% endblock %}
 
 {% block container %}
@@ -14,10 +14,10 @@
     <p style="color:red">感谢您参与，请添加微客服微信，奖励现金红包一个！（长按二维码添加）</p>
     <img src="{{ kefu_url }}" alt="">
     {% endif %}
-    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvicXDpybDibWGUxYObT8cpBtOKHibDRnWkTB5Kzfr7ynNdjJRAq3qJfE2mDB1yibADIHicZndYF4JiabdQ/0"/>
-    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvicXDpybDibWGUxYObT8cpBtf1DKN4MtQN4TgCPS2v03Wq9LutYL1qWPOViaJyZrGLn5ibnFlgJWayiaA/0"/>
-    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvicXDpybDibWGUxYObT8cpBt6Y87W5TD52tnEcHzicHnr6wYpbYPxR53pP7wJcPWG1jmzVgeFmQTA3g/0"/>
-    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvicXDpybDibWGUxYObT8cpBtbOzQYltsb4I2xszsOGQcgibTUicWzCnRto0caEU21qDD7ktpBfBTRF2w/0"/>
+    <img src=""/>
+    <img src=""/>
+    <img src=""/>
+    <img src=""/>
     <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/freesamples/?f={{ vipcode }}&response_type=code&scope=snsapi_base&state=135#wechat_redirect" type="button" class="btn btn-danger" style="margin-top:16px">快点去抢 >></a>
     <p style="margin-top:16px">我的VIP邀请码: {{ vipcode }}</p>
   </div>
@@ -40,10 +40,10 @@
 
   global_timer =  window.setInterval(slideup, 3500);
 
-var imgUrl = "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLupibeUUTBbhbybLrhfNa2E5RT33NF7bs3zfYIicNNrX5bFVpmvEEstfIsa73ia4uodeiamOIte6T4p7A/0";
+var imgUrl = "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z38MIUrX95ZVsYNjxrfGnUX3j3ibmCVsnvt2yoleHYs1zXoppdDDiaLqbibg/0";
 var lineLink = "http://weixin.huyi.so/weixin/sampleads/{{ pk }}/";
-var descContent = "自从有了娃，梦想中，他们睡觉是这样。。。";
-var shareTitle = "自从有了娃，睡袋免费拿！";
+var descContent = "其实，每个宝宝都爱洗澡。。。";
+var shareTitle = "浴巾用得好，宝宝爱洗澡！";
 var user_openid = "{{ wx_user.openid }}";
 
   wx.config({
