fix weixin result adn sampleads

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -61,11 +61,9 @@
   {% endif %}
   <p style="color:#029fd6">审核说明：本次免费试用活动，邀请码使用次数及点击次数越高，审核通过几率越大！</p>
   <p style="color:#029fd6">加分规则：
-    <ul style="color:#029fd6">
-      <li >只有微信好友的点击才会给你加分；</li>
-      <li>每个微信用户只有前5次点击能给5位朋友的链接加分，超过5次后的点击不计加分；</li>
-      <li>同一个手机上登录多个帐号相互点击不会加分；</li>
-    </ul>
+  <p> 1）只有微信好友的点击才会给你加分；</p>
+  <p> 2）每个微信用户只有前5次点击能给5位朋友的链接加分，超过5次后的点击不计加分；</p>
+  <p> 3）同一个手机上登录多个帐号相互点击不会加分；</p>
   </p>
   <p style="color:red">如果您的综合得分在100分以上，您将具有极大的竞争力！</p>
   <p><a href="/weixin/sampleads/{{ wx_user.pk }}/">快快分享您的VIP邀请码专属页面吧！ Go >></a></p>
