--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -10,14 +10,16 @@
 <div class="container-fluid">
   <div class="thumbnail" style="text-align:center">
     {% if identical %}
-    <img id="id_donebox" src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvicXDpybDibWGUxYObT8cpBtibR2bAgNhGJQyFtnJBxzx3qfwAQMibbYWF2SN4XZe0YWkBJIuvHBm0xg/0"/>
+    <img id="id_donebox" src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs0e3mcsIj9jBmIzl1fMYaH501wnBGIic6OqrD598qOey6ibZiaT6MyDeRcRch7FDp5FibmHM4WO2LOPA/0"/>
     <p style="color:red">感谢您参与，请添加微客服微信，奖励现金红包一个！（长按二维码添加）</p>
     <img src="{{ kefu_url }}" alt="">
     {% endif %}
-    <img src=""/>
-    <img src=""/>
-    <img src=""/>
-    <img src=""/>
+    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs0e3mcsIj9jBmIzl1fMYaHfqxwMpaarzesR1nucnYUD2JGUwprkT9qBySLWuRjDekELX6PyyftcQ/0"/>
+    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs0e3mcsIj9jBmIzl1fMYaHF0kroGNlIiaV2kOuPuyC28fSa3dibR5Z6TNl2bmO7MeRZa28tGGrvyug/0"/>
+    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs0e3mcsIj9jBmIzl1fMYaHuVV9XdQ3ZYWMJyQJgiag2nDjgFb3rmMKzIontTicfKRQe3ONo8WtMadw/0"/>
+    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs0e3mcsIj9jBmIzl1fMYaH1uWAXn3Jsiavib1E12Y4pjuy0Qd4rtQpmodRET27Ta5mmqVmVeo0r3xQ/0"/>
+    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs0e3mcsIj9jBmIzl1fMYaHqYKbueGF9ErbZLzfYicpOicMkYZMZjO4X5ZN0SpQlJ0rK0UyMY7PHDgg/0"/>
+    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs0e3mcsIj9jBmIzl1fMYaH7jzNIqdHMzia7XufmBnSsWM3D453YvMTHs4eJNdA8iayibSBOt1ticDzcw/0"/>
     <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/freesamples/?f={{ vipcode }}&response_type=code&scope=snsapi_base&state=135#wechat_redirect" type="button" class="btn btn-danger" style="margin-top:16px">快点去抢 >></a>
     <p style="margin-top:16px">我的VIP邀请码: {{ vipcode }}</p>
   </div>
