--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -2,7 +2,7 @@
 
 
 {% block title %} 
-浴巾用得好，宝宝爱洗澡！
+抢！2000条宝宝卡通浴巾免费送啦！
 {% endblock %}
 
 {% block container %}
@@ -44,8 +44,8 @@
 
 var imgUrl = "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtwVNgtZuNUJnbO5P487z38MIUrX95ZVsYNjxrfGnUX3j3ibmCVsnvt2yoleHYs1zXoppdDDiaLqbibg/0";
 var lineLink = "http://weixin.huyi.so/weixin/sampleads/{{ pk }}/";
-var descContent = "其实，每个宝宝都爱洗澡。。。";
-var shareTitle = "浴巾用得好，宝宝爱洗澡！";
+var descContent = "浴巾用得好，宝宝爱洗澡！其实，每个宝宝都爱洗澡。。。";
+var shareTitle = "抢！2000条宝宝卡通浴巾免费送啦！";
 var user_openid = "{{ wx_user.openid }}";
 
   wx.config({
