fix sample ads1

--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -11,8 +11,10 @@
   <div class="thumbnail" style="text-align:center">
     {% if identical %}
     <img id="id_donebox" src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs0e3mcsIj9jBmIzl1fMYaHFpZwlK0PynUhZUU3fA0J4KmIrftRhG4W3zhdwicAXxNLRW2qG1iaF5cA/0"/>
+    {% if hongbao_pass %}
     <p style="color:red">感谢您参与，请添加微客服微信，奖励现金红包一个！（长按二维码添加）</p>
     <img src="{{ kefu_url }}" alt="">
+    {% endif %}
     {% endif %}
     <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs0e3mcsIj9jBmIzl1fMYaHfqxwMpaarzesR1nucnYUD2JGUwprkT9qBySLWuRjDekELX6PyyftcQ/0"/>
     <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs0e3mcsIj9jBmIzl1fMYaHF0kroGNlIiaV2kOuPuyC28fSa3dibR5Z6TNl2bmO7MeRZa28tGGrvyug/0"/>
