--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -12,7 +12,7 @@
     {% if identical %}
     <img id="id_donebox" src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs0e3mcsIj9jBmIzl1fMYaHFpZwlK0PynUhZUU3fA0J4KmIrftRhG4W3zhdwicAXxNLRW2qG1iaF5cA/0"/>
     {% if hongbao_pass %}
-    <p style="color:red">感谢您参与，请添加微客服微信，奖励现金红包一个！（长按二维码添加）</p>
+    <p style="color:red">亲，感谢您参与活动，您还获得了微信现金红包一个！请扫二维码加客服微信领取！（长按二维码添加;或保存图片，微信扫一扫，选择相册）</p>
     <img src="{{ kefu_url }}" alt="">
     {% endif %}
     {% endif %}
