fix weixin freesample and invite result1

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -18,7 +18,8 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">免费试用 中奖名单</div>
     <div class="panel-body">
-      <p style="color:red;">3月23日 - 3月30日 2000件卡通浴巾免费派送！<a href="http://weixin.huyi.so/weixin/freesamples/">大家快抢 >></a></p>
+      <p style="color:red;">3月23日 - 3月30日 <font style="font-size:20px;color:red;">2000</font>件卡通浴巾免费派送！<a href="http://weixin.huyi.so/weixin/freesamples/">大家快抢 >></a></p>
+      <p>第一批 共569名 ，邀请码 14 次 ，点击 70 次以上  <a href="/weixin/finallist/1/1/150322/">中奖名单&gt;&gt;</a></p>
     </div>
   </div>
 
