fix weixin sample template

--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -11,11 +11,11 @@
     <div class="panel-heading" style="color:orange">三月送浴巾活动 公告</div>
     <div class="panel-body">
       {% if started %}
-      <p>距离活动结束还有<font style="color:red;"><span style="font-size:20px">{{ days }}</span>天<span style="font-size:20px">{{ hours }}</span>小时<span style="font-size:20px">{{ minutes }}</span>分</font>，共有<font style="color:red;font-size:20px">2000份</font>卡通浴巾免费领取！</p>
+      <p>距离活动结束还有<font style="color:red;"><span style="font-size:20px">{{ days }}</span>天<span style="font-size:20px">{{ hours }}</span>小时<span style="font-size:20px">{{ minutes }}</span>分</font>， 共有<font style="color:red;font-size:20px">2000份</font>卡通浴巾免费领取！</p>
       {% else %}
       <p>距离活动开始还有<font style="color:red;"><span style="font-size:20px">{{ days }}</span>天<span style="font-size:20px">{{ hours }}</span>小时<span style="font-size:20px">{{ minutes }}</span>分</font>，共有<font style="color:red;font-size:20px">2000份</font>卡通浴巾免费领取！</p>
       {% endif %}
-      <p>第一批 免费名单已经公布 共569名  <a href="/weixin/inviteresult/">查看名单&gt;&gt;</a></p>
+      <p>前两批 免费名单已经公布 共1074名，恭喜她们  <a href="/weixin/inviteresult/">查看名单&gt;&gt;</a></p>
       <!--
       <p>第一批 综合得分 350，点击次数 20 以上  <a href="/weixin/finallist/2/1/1/">中奖名单&gt;&gt;</a></p>
       <p>第三批 综合得分 356，邀请码使用28以上  <a href="/weixin/finallist/3/1/1/">中奖名单&gt;&gt;</a></p>
