--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -21,6 +21,7 @@
       <p style="color:red;">3月23日 - 3月30日 <font style="font-size:20px;color:red;">2000</font>件卡通浴巾免费派送！<a href="http://weixin.huyi.so/weixin/freesamples/">大家快抢 >></a></p>
       <p>第一批 共569名 ，邀请码 14 次 ，点击 70 次以上  <a href="/weixin/finallist/1/1/150322/">中奖名单&gt;&gt;</a></p>
       <p>第二批 共505名 ，邀请码 19次 ，点击 69次以上  <a href="/weixin/finallist/2/1/150322/">中奖名单&gt;&gt;</a></p>
+      <p>第三批 共407名 ，邀请码 18次 ，点击 69次以上  <a href="/weixin/finallist/3/1/150322/">中奖名单&gt;&gt;</a></p>
     </div>
   </div>
 
