fix sample template

--- a/shopmanager/shopapp/weixin/templates/weixin/scoremenu.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/scoremenu.html
@@ -43,7 +43,7 @@
   <ul class="list-group">
     <li class="list-group-item list-group-item-success">积分活动</li>
     <li class="list-group-item"><font style="color:orange">积分返利</font>：购物订单每满100元，可使用10积分在微信平台申请10元返利，上不封顶（<font style="color:orange">换购活动除外</font>）。</li>
-    <li class="list-group-item"><font style="color:orange">积分换购</font>：每月的积分换购活动，美妈们可用10积分<font style="color:red">折上再5折</font>换购指定热销商品。</li>
+    <!--<li class="list-group-item"><font style="color:orange">积分换购</font>：每月的积分换购活动，美妈们可用10积分<font style="color:red">折上再5折</font>换购指定热销商品。</li>-->
   </ul>
 
   <ul class="list-group">
@@ -59,7 +59,7 @@
 
 
   <div class="footer">
-    <p>© Uni Littles 2014</p>
+    <p>© Uni Littles 2015</p>
   </div>
   
 </div>
