--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -22,7 +22,7 @@
       <p>第一批 共569名 ，邀请码 14 次 ，点击 70 次以上  <a href="/weixin/finallist/1/1/150322/">中奖名单&gt;&gt;</a></p>
       <p>第二批 共505名 ，邀请码 19次 ，点击 69次以上  <a href="/weixin/finallist/2/1/150322/">中奖名单&gt;&gt;</a></p>
       <p>第三批 共407名 ，邀请码 18次 ，点击 69次以上  <a href="/weixin/finallist/3/1/150322/">中奖名单&gt;&gt;</a></p>
-      <p>第三批 共455名 ，邀请码 18次 ，点击 69次以上  <a href="/weixin/finallist/4/1/150322/">中奖名单&gt;&gt;</a></p>
+      <p>第四批 共455名 ，邀请码 18次 ，点击 69次以上  <a href="/weixin/finallist/4/1/150322/">中奖名单&gt;&gt;</a></p>
     </div>
   </div>
 
