fix sample award templte

--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -12,11 +12,11 @@
     <div class="panel-body">
       {% if started %}
       <p>距离活动结束还有<font style="color:red;"><span style="font-size:20px">{{ days }}</span>天<span style="font-size:20px">{{ hours }}</span>小时<span style="font-size:20px">{{ minutes }}</span>分</font>
-            ，为了感谢美妈们的积极参与，小鹿美美团队决定再加<font style="color:red;font-size:20px;">1000个</font>免费名额，共有<font style="color:red;font-size:20px">3000份</font>卡通浴巾免费领取！</p>
+            ，为了感谢美妈们的积极参与，小鹿美美团队决定再加<font style="color:red;font-size:20px;">1000个</font>免费名额，共有<font style="color:red;font-size:20px">3000份</font>卡通浴巾免费领取！还有<font style="color:red;font-size:20px">647</font>件，赶快申请吧!</p>
       {% else %}
       <p>距离活动开始还有<font style="color:red;"><span style="font-size:20px">{{ days }}</span>天<span style="font-size:20px">{{ hours }}</span>小时<span style="font-size:20px">{{ minutes }}</span>分</font>，共有<font style="color:red;font-size:20px">2000份</font>卡通浴巾免费领取！</p>
       {% endif %}
-      <p>前四批 免费名单已经公布 共1936名，恭喜她们  <a href="/weixin/inviteresult/">查看名单&gt;&gt;</a></p>
+      <p>前五批 免费名单已经公布 共1936名，恭喜她们  <a href="/weixin/inviteresult/">查看名单&gt;&gt;</a></p>
       <!--
       <p>第一批 综合得分 350，点击次数 20 以上  <a href="/weixin/finallist/2/1/1/">中奖名单&gt;&gt;</a></p>
       <p>第三批 综合得分 356，邀请码使用28以上  <a href="/weixin/finallist/3/1/1/">中奖名单&gt;&gt;</a></p>
@@ -101,7 +101,7 @@
     <h5 style="color:#3071a9">申请须知</h5>
     <p style="color:red">1) 申请提交完成的页面底部，有您的专属VIP邀请码！</p>
     <p>2) 若您有过购买记录、晒单记录、好评记录、或邀请好友记录，系统会优先审核您的申请。</p>
-    <p>3) 审核结果将在【活动中心】->【审核通知】页面显示，请查阅。<font style="color:red">分数越高，中奖几率越大！</font>！</p>
+    <p>3) 审核结果于每天上午10点发布，将在【活动中心】->【审核通知】页面显示，请查阅。<font style="color:red">分数越高，中奖几率越大！</font>！</p>
   </div>
 </div>
 
