fix weixin views and invite result

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -6,7 +6,7 @@
 
 <div class="container-fluid">
 
-<!--  <div class="panel panel-default" style="margin-top:5px">
+<!--<div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">免费试用 中奖名单</div>
     <div class="panel-body">
       <p>第一批 综合得分 140，点击次数 10 以上  <a href="/weixin/finallist/1/1/1/">中奖名单&gt;&gt;</a></p>
@@ -24,6 +24,7 @@
       <p>第三批 共407名 ，邀请码 18次 ，点击 69次以上  <a href="/weixin/finallist/3/1/150322/">中奖名单&gt;&gt;</a></p>
       <p>第四批 共455名 ，邀请码 18次 ，点击 69次以上  <a href="/weixin/finallist/4/1/150322/">中奖名单&gt;&gt;</a></p>
       <p>第五批 共455名 ，邀请码 18次 ，点击 69次以上  <a href="/weixin/finallist/5/1/150322/">中奖名单&gt;&gt;</a></p>
+      <p>第六批 共647名 ，邀请码 18次 ，点击 69次以上  <a href="/weixin/finallist/6/1/150322/">中奖名单&gt;&gt;</a></p>
     </div>
   </div>
 
