fix https static  css file out link

--- a/shopmanager/shopback/trades/templates/trades/trade_products_statistic.html
+++ b/shopmanager/shopback/trades/templates/trades/trade_products_statistic.html
@@ -3,8 +3,7 @@
 <head>
 	<title>订单交易商品统计</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-   
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap3.2.0.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}jquery-timepicker-addon/timepicker/jquery-ui-timepicker-addon.css" type="text/css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css" />
 	<script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js"></script>
