--- a/shopmanager/templates/bootstrap_base.html
+++ b/shopmanager/templates/bootstrap_base.html
@@ -3,7 +3,7 @@
 <head>
    <title>{% block title %}{% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap3.2.0.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css" type="text/css" />
     <style type="text/css">
         *{ margin:0; padding:0;}
