change weixin base js from cdn to local

--- a/shopmanager/shopapp/weixin/templates/weixin/weixin_base.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/weixin_base.html
@@ -28,9 +28,9 @@
     {% endblock %}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="http://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+    <script src="{{ STATIC_URL }}jquery/jquery-2.1.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-3.2.0.min.js"></script>
     {% block tail_script %}
     {% endblock %}
 	
