--- a/shopmanager/shopback/refunds/templates/refunds/refund_manager.html
+++ b/shopmanager/shopback/refunds/templates/refunds/refund_manager.html
@@ -32,7 +32,7 @@
 		.container table{ 
 			table-layout:fixed;
 		}
-		.container table td{text-overflow:ellipsis;overflow: hidden;white-space:nowrap;word-break:keep-all; }
+		.container table td{overflow: hidden;white-space:nowrap;}
 		.map-content {
 			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 		    font-size: 13px;
