--- a/shopmanager/shopapp/xiaolumm/templates/xiaolumama.html
+++ b/shopmanager/shopapp/xiaolumm/templates/xiaolumama.html
@@ -5,6 +5,17 @@
 
 {% block container %}
 <div style="margin-top:20px">
+  <select class="form-control" name="color" id="id_selection_color">
+    <option value="1">小巧虎</option>
+    <option value="2">小粉兔</option>
+    <option value="3">小奔牛</option>
+    <option value="4">小萌象</option>
+    <option value="5">长颈鹿</option>
+    <option value="6">猫头鹰</option>
+  </select>
+</div>
+
+<div style="margin-top:20px">
   <table class="table table-bordered">
     <thead>
       <th>手机号</th><th>访问人数</th><th>访问次数</th><th>微客服</th>
