--- a/shopmanager/shopapp/xiaolumm/templates/stats.html
+++ b/shopmanager/shopapp/xiaolumm/templates/stats.html
@@ -8,15 +8,15 @@
   <div class="col-xs-8"></div>
   <div class="col-xs-4">
   <select class="form-control" name="color" id="id-select">
-    <option {% if pk == '70' %} selected="selected" {% endif %} value="70">zhehui.zhou</option>
-    <option {% if pk == '75' %} selected="selected" {% endif %} value="75">xiaobo.dai</option>
-    <option {% if pk == '76' %} selected="selected" {% endif %} value="76">xiaoguang.huo</option>
-    <option {% if pk == '81' %} selected="selected" {% endif %} value="81">yechu.li</option>
-    <option {% if pk == '55' %} selected="selected" {% endif %} value="55">jasmine.jiang</option>
-    <option {% if pk == '56' %} selected="selected" {% endif %} value="56">hua.yan</option>
-    <option {% if pk == '6' %} selected="selected" {% endif %} value="6">zifei.zhong</option>
-    <option {% if pk == '7' %} selected="selected" {% endif %} value="7">shirley.zhang</option>
-    <option {% if pk == '77' %} selected="selected" {% endif %} value="77">bing.luo</option>
+    <option {% if pk == 70 %} selected="selected" {% endif %} value="70">zhehui.zhou</option>
+    <option {% if pk == 75 %} selected="selected" {% endif %} value="75">xiaobo.dai</option>
+    <option {% if pk == 76 %} selected="selected" {% endif %} value="76">xiaoguang.huo</option>
+    <option {% if pk == 81 %} selected="selected" {% endif %} value="81">yechu.li</option>
+    <option {% if pk == 55 %} selected="selected" {% endif %} value="55">jasmine.jiang</option>
+    <option {% if pk == 56 %} selected="selected" {% endif %} value="56">hua.yan</option>
+    <option {% if pk == 6 %} selected="selected" {% endif %} value="6">zifei.zhong</option>
+    <option {% if pk == 7 %} selected="selected" {% endif %} value="7">shirley.zhang</option>
+    <option {% if pk == 77 %} selected="selected" {% endif %} value="77">bing.luo</option>
   </select>
   </div>
 </div>
