fix weixin freesample and wsgi and add robots

--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class="panel panel-default" style="margin-top:5px">
-  <div class="panel-heading" style="color:red">2015新款卡通浴巾（适用0-6岁）</div>
+  <div class="panel-heading" style="color:red">上期活动产品展示</div>
   <div class="panel-body">
     
     <form action="/weixin/sampleapply/" method="post" onsubmit="return check()" class="form-group">{% csrf_token %}
@@ -59,7 +59,7 @@
  	</div>
       </div>
     
-      <div class="row" style="margin-top:10px">
+      <!--<div class="row" style="margin-top:10px">
 	<div class="col-xs-2"></div>	  
 	<div class="col-xs-8" style="text-align:center">
 	  {% if order_number < 600 %}
@@ -93,7 +93,7 @@
         {% endif %}
 	{% endif %}
 	</div>
-      </div>
+      </div> -->
     </form>
   </div>
 </div>
