--- a/shopmanager/shopapp/xiaolumm/templates/stats.html
+++ b/shopmanager/shopapp/xiaolumm/templates/stats.html
@@ -1,55 +1,142 @@
 {% extends "mama_base.html" %}
 
-{% block title %} 每日数据 {% endblock %}
+{% block title %} 每日数据统计 {% endblock %}
 
-
-{% block container %}
-<div class="row" style="margin-top:20px">
-  <div class="col-xs-8"></div>
-  <div class="col-xs-4">
-  <select class="form-control" name="color" id="id-select">
-    <option {% if pk == 70 %} selected="selected" {% endif %} value="70">zhehui.zhou</option>
-    <option {% if pk == 75 %} selected="selected" {% endif %} value="75">xiaobo.dai</option>
-    <option {% if pk == 76 %} selected="selected" {% endif %} value="76">xiaoguang.huo</option>
-    <option {% if pk == 81 %} selected="selected" {% endif %} value="81">yechu.li</option>
-    <option {% if pk == 55 %} selected="selected" {% endif %} value="55">jasmine.jiang</option>
-    <option {% if pk == 56 %} selected="selected" {% endif %} value="56">hua.yan</option>
-    <option {% if pk == 6 %} selected="selected" {% endif %} value="6">zifei.zhong</option>
-    <option {% if pk == 7 %} selected="selected" {% endif %} value="7">shirley.zhang</option>
-    <option {% if pk == 77 %} selected="selected" {% endif %} value="77">bing.luo</option>
-  </select>
-  </div>
-</div>
-
-<div style="margin-top:20px">
-  <table class="table table-bordered">
-    <thead>
-      <th>手机</th><th>UV</th><th>PV</th><th>客服</th><th>类别</th><th>订单</th>
-    </thead>
-    <tbody>
-      {% for item in data %}
-      <tr><td>{{ item.mobile }}</td><td>{{ item.user_num }}</td><td>{{ item.click_num }}</td><td>{{ item.weikefu }}</td><td>{{ item.agencylevel }}</td><td>{{ item.order_num }}</td></tr>
-      {% endfor %}
-    </tbody>
-  </table>
-</div>
-
-
-<form action="/m/stats/" method="get" id="id-form">
-  <input type="hidden" name="pk" id="id-pk"/>
-</form>
-
+{% block head_script %}
+<link href='{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css' rel='stylesheet'  />	
+<style type="text/css" title="currentStyle">
+	@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
+	@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css";
+</style>  
+<style type="text/css" >
+    tfoot input{
+    	width:50%;
+    }
+</style>
 {% endblock %}
 
 
-{% block tail_script %}
+{% block container %}
+<div class="row">
+	<div class="page-header"  >
+	<h2>小鹿妈妈-今日数据统计</h2>
+	</div>
+</div>
 
+<div style="margin-top:20px">
+  <table id="state_table" class="table table-bordered">
+    <thead>
+      <th>管理员</th><th>手机</th><th>UV</th><th>PV</th><th>客服</th><th>类别</th><th>订单</th>
+    </thead>
+    <tbody>
+      {% for item in data %}
+      <tr><td>{{ item.username }}</td><td>{{ item.mobile }}</td><td>{{ item.user_num }}</td><td>{{ item.click_num }}</td>
+      <td>{{ item.weikefu }}</td><td>{{ item.agencylevel }}</td><td>{{ item.order_num }}</td></tr>
+      {% endfor %}
+    </tbody>
+    <tfoot>
+		<tr><td colspan="2"></td>
+			<td><input id="total_user_num" type="text"  value="0" readonly/></td>
+			<td><input id="total_click_num" type="text"  value="0" readonly/></td>
+			<td colspan="2"></td>
+			<td><input id="total_order_num" type="text"  value="0" readonly/></td>
+		</tr>
+	</tfoot>
+  </table>
+</div>
+
+{% endblock %}
+
+{% block tail_script %}
+<script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
 <script type="text/javascript">
-  $("#id-select").change(function(){ 
-    var val = $(this).children("option:selected").val();
-    $("#id-pk").val(val);
-    $("#id-form").submit()
+
+  $('#state_table').dataTable({
+   		//"bJQueryUI": true,
+		"bAutoWidth": false, //自适应宽度
+		"aaSorting": [[1, "asc"]],
+		"iDisplayLength": 50,
+		"aLengthMenu": [[20, 50, 100, -1], [20, 50, 100, "All"]],
+		//"sPaginationType": "full_numbers",
+		//"sDom": '<"H"Tfr>t<"F"ip>',
+		"oLanguage": {
+			"sLengthMenu": "每页 _MENU_ 条",
+			"sZeroRecords": "抱歉， 没有找到",
+			"sInfo": "从 _START_ 到 _END_ /共 _TOTAL_ 条",
+			"sInfoEmpty": "没有数据",
+			"sSearch": "搜索",
+			"sInfoFiltered": "(从 _MAX_ 条数据中检索)",
+			"oPaginate": {
+				"sFirst": "首页",
+				"sPrevious": "前一页",
+				"sNext": "后一页",
+				"sLast": "尾页"
+			},
+			"sZeroRecords": "没有检索到数据",
+			"sProcessing": "<img src='/static/img/loading.gif' />"
+		}		
   });
+  
+  var Calc_stats_data = function(){
+	var total_user_num = 0;
+	var total_click_num = 0;
+	var total_order_num = 0;
+	
+	var user_num  = 0;
+	var click_num = 0;
+	var order_num = 0;
+
+	var rows = $("#state_table > tbody > tr");
+	for(var i=0;i < rows.length;i++){
+		row = rows[i];
+		if (row.cells.length < 7){continue;}
+		
+		user_num  = row.cells[2].innerHTML;
+		click_num = row.cells[3].innerHTML;
+		order_num = row.cells[6].innerHTML;
+	
+		if(parseInt(user_num)){
+			total_user_num += parseInt(user_num);
+		}
+		
+		if(parseInt(click_num)){
+			total_click_num += parseInt(click_num);
+		}
+		
+		if(parseInt(order_num)){
+			total_order_num += parseInt(order_num);
+		}
+	}
+	
+	$('#total_user_num').val(total_user_num.toString());
+	$('#total_click_num').val(total_click_num.toString());
+	$('#total_order_num').val(total_order_num.toString());
+	
+  }
+  
+  $("select[name='#state_table-table_length']").change(function(e){
+		e.preventDefault();
+		Calc_stats_data();
+	});
+	
+	//搜索时，重新计算
+	$("#state_table_filter input").keyup(function(e){
+		e.preventDefault();
+		Calc_stats_data();
+	});
+	
+	//分页时，重新计算
+	$("#state_table_paginate a").click(function(e){
+		e.preventDefault();
+		Calc_stats_data();
+	});
+	
+	
+	$(function() {
+		console.log('abc');
+    	Calc_stats_data();
+	});
+
 </script>
 
 {% endblock %}
